--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Das hier wird eine coole Urlaubswebseite!</h1>
     <p>Ein kleiner Absatz.</p>
+    <p>In Europa gibt es viele Reiseziele</p>
 </body>
 </html>
