--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Coole Urlaubswebseite></title>
+    <title>Coole Urlaubswebseite !!</title>
 </head>
 <body>
     <h1>Das hier wird eine coole Urlaubswebseite!</h1>
