--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: rgb(255, 255, 255)">
     <h1>Das hier wird eine coole Urlaubswebseite!</h1>
-    <p>Ein kleiner Absatz...</p>
+    <p style="color: red;">Ein kleiner Absatz.</p>
     <p>In Europa gibt es viele Reiseziele</p>
     <p>Nochmal mehr Inhalt</p>
     <a href="#">nach oben springen</a>
