--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Coole Urlaubswebseite !!</title>
 </head>
-<body style="background-color: rgb(245, 245, 245)">
+<body>
     <h1>Das hier wird eine coole Urlaubswebseite!</h1>
     <p style="color: red;">Ein kleiner Absatz.</p>
     <p>In Europa gibt es viele Reiseziele</p>
